[gd_scene load_steps=9 format=3 uid="uid://brnt1jhxcyki0"]

[ext_resource type="Script" path="res://power_up.gd" id="1_ic2u2"]
[ext_resource type="Texture2D" uid="uid://1nnqsayrwyxq" path="res://assets/points/bombpoint_small.png" id="2_mcruo"]
[ext_resource type="Texture2D" uid="uid://co007b0vhypn7" path="res://assets/points/bombpoint_large.png" id="2_xn75k"]
[ext_resource type="Texture2D" uid="uid://c6o5y6gcbey0v" path="res://assets/points/point_small.png" id="4_785wy"]
[ext_resource type="Texture2D" uid="uid://ce8pgbjf77g1c" path="res://assets/points/point_large.png" id="5_s2xpf"]
[ext_resource type="Texture2D" uid="uid://bh1mrf88sac0j" path="res://assets/points/powerpoint_small.png" id="6_gwle0"]
[ext_resource type="Texture2D" uid="uid://3d8odc4jfmlr" path="res://assets/points/powerpoint_large.png" id="7_a8lu7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6my2"]
size = Vector2(121, 126)

[node name="PowerUp" type="Area2D"]
script = ExtResource("1_ic2u2")

[node name="BombSmall" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_mcruo")

[node name="BombLarge" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_xn75k")

[node name="CashSmall" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_785wy")

[node name="CashLarge" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_s2xpf")

[node name="PowerSmall" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_gwle0")

[node name="PowerLarge" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_a8lu7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_w6my2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
